<resources>
    <string name="app_name">Nutrio</string>
    <string name="user">User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="tools">Tools</string>
    <string name="feeding_log">Feeding Log</string>
    <string name="breastfeeding_timer">Breastfeeding Timer</string>
    <string name="breastfeeding_tips">Breastfeeding Tips</string>
    <string name="sanford_services">Sanford Services</string>
    <string name="background">background</string>
    <string name="new_arrivals_group">New Arrivals Group</string>
    <string name="feeding_support_line">Breastfeeding Support Line</string>
    <string name="new_baby_and_me_group">New Baby and Me Group</string>
    <string name="title_activity_timer">Timer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_left">Start Left</string>
    <string name="start_right">Start Right</string>
    <string name="enter_today_s_weight">Enter today\'s weight</string>
</resources>
